# ai-expenses-agent

./: .gitignore  example.env  main.py  pyproject.toml
app/: config.py  database.py  init_db.py
app/core/: expense_processor.py
app/models/: __init__.py  category.py  expense.py
app/services/: currency.py  document_processor.py  document_service.py  file_downloader.py  image_processor.py  models.py
app/services/ai/: __init__.py  base.py  claude_provider.py  factory.py  openai_provider.py
app/telegram/: bot.py  handlers.py
docker/: docker-compose.yml  init-pg-hba.sh  init.sql
